--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="https://glitch.com/favicon.ico" />
 
     <title>Charts.js Visualizations</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="/script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body>
     <div id="top-left">
